Fix layout issues in Safari

--- a/src/components/Main.scss
+++ b/src/components/Main.scss
@@ -24,7 +24,9 @@
     }
   }
 
-  &-withdrawals {
+  &-mid-right {
+    height: 100%;
+
     .Panel-contents {
       padding: 0;
     }
