--- a/src/components/TextField.scss
+++ b/src/components/TextField.scss
@@ -4,6 +4,7 @@
   appearance: none;
   border: none;
   border-bottom: 1px solid $color1Dark3;
+  border-radius: 0;
   outline: none;
   background-color: $bgColor;
   color: $color1;
